Rename main -> Jensen_Shape_Sensitivity

--- a/src/2_intro.tex
+++ b/src/2_intro.tex
@@ -58,5 +58,5 @@ This too, yielded sub-par performance.
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../main"
+%%% TeX-master: "../Jensen_Shape_Sensitivity"
 %%% End:
