--- a/src/3_methods.tex
+++ b/src/3_methods.tex
@@ -100,6 +100,6 @@ These plots will be compared with respect to JTML optimization performance and r
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../main"
-%%% TeX-master: "../main"
+%%% TeX-master: "../Jensen_Shape_Sensitivity"
+%%% TeX-master: "../Jensen_Shape_Sensitivity"
 %%% End:
