--- a/src/4_results.tex
+++ b/src/4_results.tex
@@ -57,5 +57,5 @@ The femoral implant had the highest average sensitivity ($\frac{\mathbb{S}(\delt
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../main"
+%%% TeX-master: "../Jensen_Shape_Sensitivity"
 %%% End:
