--- a/src/5_discussion.tex
+++ b/src/5_discussion.tex
@@ -26,5 +26,5 @@ Optimization over Lie groups is an emerging subfield - establishing robust $SO(3
 
 %%% Local Variables:
 %%% mode: latex
-%%% TeX-master: "../main"
+%%% TeX-master: "../Jensen_Shape_Sensitivity"
 %%% End:
