First draft done. Sent to Banks for edits Added line numbers

--- a/src/1_abstract.tex
+++ b/src/1_abstract.tex
@@ -1,5 +1,10 @@
 \begin{abstract}
-  Abstract Placeholder
+	Recent methods in computer vision and machine learning have enabled fully-autonomous kinematics measurement for Total Knee Arthroplasty implant components.
+	Unfortunately, this same performance does not translate to reverse Total Shoulder Arthroplasty implants.
+	This study explores relating 3D implant orientation to 2D projection sensitivity using the Invariant Angular Radial Transform Descriptor (IARTD).
+	Minor rotational differences yielded negligible shape changes along near-symmetric dimensions like humeral internal-external rotation and tibial internal/external axis.
+	Furthermore, axes problematic for registration correlated with lower descriptor sensitivity.
+	Overall, symmetrical geometries and orientations intrinsically limit extractable silhouette information. However, incorporating bony anatomical landmarks as optimization constraints shows promise for overcoming ambiguity and registration difficulties.
 \end{abstract}
 
 %%% Local Variables:
