--- a/src/3_methods.tex
+++ b/src/3_methods.tex
@@ -1,7 +1,7 @@
 \section{Methods}
 
 \subsection{Data Collection}
-First, we collected one manufacturer-provided model from each of: rTSA humeral implant, rTSA glenosphere implant, TKA femoral implant, and TKA tibial implant for testing shape sensitivity.
+We obtained one manufacturer-provided 3D model for each of the following: reverse total shoulder arthroplasty (rTSA) humeral implant, rTSA glenosphere implant, total knee arthroplasty (TKA) femoral implant, and TKA tibial implant. These were used to test shape sensitivity.
 \subsection{Image Generation}
 The binary silhouette of each implant was rendered using an in-house CUDA camera model (CUDA Version 12.1) \cite{nickollsScalableParallelProgramming2008} to a $1024\times 1024$ image plane.
 The focal length of the pinhole camera model was 1000mm and each pixel was 0.3mm.
