--- a/src/6_conclusion.tex
+++ b/src/6_conclusion.tex
@@ -1,4 +1,10 @@
 \section{Conclusion}
+This study demonstrates intrinsic differences between implant types regarding projected 2D shape sensitivity.
+Measurement difficulties aligned with low sensitivity along problematic axes—humeral internal rotation and tibial symmetry traps.
+Fundamentally, minor orientation changes yielded negligible 2D variability for near-symmetrical geometries.
+While inherent shape constraints limit data extractable solely from fluoroscopic silhouettes, incorporating additional image information like bone offers promise.
+Despite unavoidable ambiguity along select dimensions, boosting descriptor sensitivity and employing precise anatomical constraints could enable robust clinical tracking.
+Overall, relating optimization performance to shape response underscores routes toward accurate autonomous kinematic analysis.
 
 %%% Local Variables:
 %%% mode: latex
