--- a/Jensen_Shape_Sensitivity.tex
+++ b/Jensen_Shape_Sensitivity.tex
@@ -7,6 +7,7 @@
 
 % Set page margins
 \usepackage[letterpaper, left=1in, right=1in, top=1in, bottom=1in]{geometry}
+\usepackage{lineno}
 \usepackage[capitalize]{cleveref}
 \creflabelformat{equation}{#2\textup{#1}#3}
 \crefdefaultlabelformat{#2\textup{#1}#3}
@@ -23,7 +24,7 @@
 \usepackage{mlmodern}
 
 \begin{document}
-
+\linenumbers
 \title{3D/2D Projected Shape Sensitivity Analysis of Total Joint Arthroplasty Implants}
 \author{Andrew James Jensen, Scott Banks, Ph.D.}
 \date{}
