--- a/src/4_results.tex
+++ b/src/4_results.tex
@@ -1,10 +1,10 @@
 \section{Results}
-
-The average value of $\mathbb{S}(\delta_{y})$ for the humeral implant was much lower than all other implant types (\cref{fig:hum_sensitivity_plot}) (\cref{tab:ss-vals}).
+The humeral implant demonstrated the lowest average $\mathbb{S}(\delta_{y})$ value compared to the other implant types (\cref{fig:hum_sensitivity_plot}) (\cref{tab:ss-vals}).
 This rotation represents the final rotation in our Euler rotation sequence (Z-X-Y) and captures the internal/external rotation of the humeral implant.
 The average $\delta_{x}$ value for our humeral implant was the largest among all implants (\cref{tab:ss-vals}).
 Additionally, the surface plotted by the humeral shape sensitivity for all $\delta_{x,y,z}$ is much smoother than any of the other plots, demonstrating the relative lack of shape difference for a wide range of input orientations.
-Many other plots had regions of relative in-sensitivity, like the glenosphere $\delta_{y}$ sensitivity along the $y=0$ axis (\cref{fig:sca_sensitivity_plot}) and the tibial $\delta_{y}$ sensitivity along the $x=0$ axis (\cref{fig:tib_sensitivity_plot}).
+Several plots showed regions with relatively low sensitivity.
+Specifically, the glenosphere's $\delta_{y}$ sensitivity along the $y=0$ axis (\cref{fig:sca_sensitivity_plot}) and the tibial implant's $\delta_{y}$ sensitivity along the $x=0$ axis (\cref{fig:tib_sensitivity_plot}).
 The femoral implant had the highest average sensitivity ($\frac{\mathbb{S}(\delta_{x}) +\mathbb{S}(\delta_{y}) +\mathbb{S}(\delta_{z})  }{3}$) among all implant types .
 
 
